--- a/src/app/components/ui/Footer.css
+++ b/src/app/components/ui/Footer.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
 
+@font-face {
+  font-family: 'DharmaGothicThin';
+  src: url('/fonts/fonnts.com-Dharma_Gothic_E_Thin.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SpaceGroteskMedium';
+  src: url('/fonts/SpaceGrotesk-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .footer {
   width: 100%;
   height: 30vh;
@@ -14,7 +28,7 @@
 }
 
 .footer-title {
-  font-family: 'Inter', sans-serif;
+  font-family: 'DharmaGothicThin', 'Inter'; /* SpaceGrotesk not used here */
   font-size: 14vw;
   font-weight: 800;
   background: linear-gradient(to top, #2e2e2e 30%, #111 100%);
@@ -26,6 +40,7 @@
   margin: 0;
   margin-bottom: -1.9vw;
 }
+
 @media (max-width: 768px) {
   .footer {
     height: 20vh;
@@ -49,3 +64,68 @@
     margin-bottom: -4vw;
   }
 }
+
+
+/*
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
+
+@font-face {
+  font-family: 'SpaceGroteskMedium';
+  src: url('/fonts/SpaceGrotesk-Medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.footer {
+  width: 100%;
+  height: 30vh;
+  background-color: #0a0a0a;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  bottom: 0;
+  left: 0;
+  margin-top: 50px;
+  overflow: hidden;
+}
+
+.footer-title {
+  font-family: 'SpaceGroteskMedium', sans-serif;
+  font-size: 14vw;
+  font-weight: 500;
+  background: linear-gradient(to top, #2e2e2e 30%, #111 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  user-select: none;
+  line-height: 1;
+  margin: 0;
+  margin-bottom: -1.8vw;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    height: 20vh;
+    margin-top: 20px;
+  }
+
+  .footer-title {
+    font-size: 18vw;
+    margin-bottom: -3vw;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer {
+    height: 18vh;
+    margin-top: 20px;
+  }
+
+  .footer-title {
+    font-size: 22vw;
+    margin-bottom: -4vw;
+  }
+}
+
+*/
