--- a/src/app/components/ui/Footer.css
+++ b/src/app/components/ui/Footer.css
@@ -17,7 +17,7 @@
 .footer {
   width: 100%;
   height: 30vh;
-  background-color: #0a0a0a;
+  background-color: black;
   display: flex;
   align-items: flex-end;
   justify-content: center;
